# zeno_embed_demo

./: CMakeLists.txt  Makefile  README.md  assets  run.py  run.sh
YourProject/: CMakeLists.txt  MyPrimitiveOps.cpp
graphs/: CustomNumber.zsg
testApp/: CMakeLists.txt  my_zeno_scene.h  testApp.cpp
